# consensus

./: .gitignore  nodemon.json  protodep.toml  pyproject.toml
config/: default.yml
proto/: company.proto  service.proto
src/: server.py
src/lib/: utils.py
