[tool.poetry]
name = "consensus"
version = "0.1.0"
description = ""
authors = ["Barath Kumar <barath@delphai.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.32.0"
homi = "^0.1.4"
delphai-backend-utils = "^1.0.4"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.3"
pep8-naming = "^0.11.1"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
